--- a/code/check_boston_image_downsampled.ipynb
+++ b/code/check_boston_image_downsampled.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2253,7 +2253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### For the 19904 samples, split it into 80%:20% percent"
+    "### For the 19904 samples, split it into 80: 20 percent"
    ]
   },
   {
