--- a/code/merge_fetched_train_test_image_with_target.ipynb
+++ b/code/merge_fetched_train_test_image_with_target.ipynb
@@ -4,8 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After fetching images based on boston_train_list.csv and boston_test_list.csv on GCP using Google Street View API,\n",
-    "We need to merge the fetched images' metadata with the target column "
+    "In this script, after fetching images based on boston_train_list.csv and boston_test_list.csv using Google Street View API, we merge the fetched train / test images' metadata with the target variable.\n",
+    "\n",
+    "\n",
+    "You should use this script if you are saving Boston images into two (train and test) seperate folders. \n",
+    "\n",
+    "If you are saving all Boston images into one folder, you should use check_fetched_images_and_merge_with_target.ipynb."
    ]
   },
   {
