--- a/code/ensemble_boston_test.ipynb
+++ b/code/ensemble_boston_test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this script, we conduct ensemble learning based on the analyses of each single model's confusion matrix and performance. After 1. Averaging ensemble; 2. Conditional ensemble; 3. Weighted ensemble, we produced an \"All results\" table. We also tried 4. Subdistrict conditional ensemble, but did not consider it.\n",
+    "In this script, we conduct ensemble learning on the Boston Test set, basing on the analyses of each single model's confusion matrix and performance. After 1. Averaging ensemble; 2. Conditional ensemble; 3. Weighted ensemble, we produced an \"All results\" table. We also tried 4. Subdistrict conditional ensemble, but decided not to consider it.\n",
     "\n",
     "\n",
     "##### 1. Averaging ensemble\n",
@@ -15,11 +15,11 @@
     "\n",
     "- models with best accuracy (cv0cv2cv4full);\n",
     "\n",
-    "- models best at predicting target 0 (cv3full);\n",
+    "- models best at predicting safety = 0 (cv3full);\n",
     "\n",
-    "- models best at predicting target 1(cv0cv1cv2cv4own).\n",
+    "- models best at predicting safety = 1 (cv0cv1cv2cv4own).\n",
     "\n",
-    "Averaging ensembled models have better accuracy than single models. Model 'cv3full' was best at predicting safety = 0 (TN_Rate 0.756619) and model 'cv0cv1cv2cv4own' was best at predicting safety = 1 (TP_Rate 0.779363), but they are weak at predicting the other target respectively. Therefore, we would use these 2 models in conditional and weighted ensemble.\n",
+    "Averaging ensembled models had better accuracy than single models. Model 'cv3full' was best at predicting safety = 0 (TN_Rate 0.756619) and model 'cv0cv1cv2cv4own' was best at predicting safety = 1 (TP_Rate 0.779363), but they were weak at predicting the other target respectively. Therefore, we would use these 2 models in conditional and weighted ensemble.\n",
     "\n",
     "##### 2. Averaging + Conditional ensemble\n",
     "\n",
@@ -27,26 +27,26 @@
     "\n",
     "'Conditional ensemble2': When predicting safety = 1, we use the prediction by 'cv0cv1cv2cv4own'; else we use the prediction by 'cv3full'. It got TP_Rate 0.819978. However the TN_Rate was as low as 0.647933.\n",
     "\n",
-    "These two conditional ensembled models are good at predicting only one of the targets each. Therefore, we looked at weighted ensemble.\n",
+    "Comparing to 1. Averaging ensemble, these two conditional ensembled models were even better at predicting only one of the targets each, but were weaker at predicting the other target. Therefore, we looked at weighted ensemble.\n",
     "\n",
-    "##### 3. Weighted ensemble\n",
+    "##### 3. Averaging + Weighted ensemble\n",
     "\n",
-    "'weighted ensemble1': We give prediction by model 'cv3full' 0.4 weight; and prediction by model 'cv0cv1cv2cv4own' 0.6 weight. It got the best accuracy among all models: 0.741132. But this model is better at predicting safety = 1 than safety = 0 (TP_Rate 0.750274; TN_Rate 0.733395)\n",
+    "'weighted ensemble1': We gave prediction by model 'cv3full' 0.4 weight; and prediction by model 'cv0cv1cv2cv4own' 0.6 weight. It got the best accuracy among all models: 0.741132. But this model was better at predicting safety = 1 than safety = 0 (TP_Rate 0.750274; TN_Rate 0.733395)\n",
     "\n",
     "\n",
-    "'weighted ensemble2': We give prediction by model 'cv3full' 0.45 weight; and prediction by model 'cv0cv1cv2cv4own' 0.55 weight. It got the 2nd best accuracy among all models: 0.740881. This model is relatively even at predicting both safety = 1 and safety = 0 (TP_Rate 0.747530; TN_Rate 0.735253)\n",
+    "'weighted ensemble2': We gave prediction by model 'cv3full' 0.45 weight; and prediction by model 'cv0cv1cv2cv4own' 0.55 weight. It got the 2nd best accuracy among all models: 0.740881. This model performance was relatively even at predicting both safety = 1 and safety = 0 (TP_Rate 0.747530; TN_Rate 0.735253)\n",
     "\n",
-    "'weighted ensemble3': We give prediction by model 'cv3full' 0.55 weight; and prediction by model 'cv0cv1cv2cv4own' 0.45 weight. It got the 3rd best accuracy among all models: 0.735094. This model is better at predicting safety = 0 than safety = 1 (TP_Rate 0.731065; TN_Rate 0.738504)\n",
+    "'weighted ensemble3': We gave prediction by model 'cv3full' 0.55 weight; and prediction by model 'cv0cv1cv2cv4own' 0.45 weight. It got the 3rd best accuracy among all models: 0.735094. This model is better at predicting safety = 0 than safety = 1 (TP_Rate 0.731065; TN_Rate 0.738504)\n",
     "\n",
     "##### 4. Subdistrict conditional ensemble\n",
     "\n",
-    "We analyzed the confusion matrix by subdistrict, and tried one ensembled model based on the sigle model's performance by subdistrict. This model's performance was not better than the best model produced during 1,2,3. Also considering the subdistrict is not a feature in neural networks of the images, we would not consider this ensemble methond.\n",
+    "We analyzed the confusion matrix by subdistrict, and tried one ensembled model based on the sigle model's performance by subdistrict. This model's performance was not better than the models produced in 1,2,3. Also considering that the subdistrict is not a feature in neural networks of the images, we would not consider this ensemble methond.\n",
     "\n",
     "\n",
     "##### Conclusion\n",
-    "Examining the \"All results\" table, we decide to choose 'weighted ensemble2' as our final model, as it is a balance of overall accuracy and the prediction of both safety = 0 and safety = 1.\n",
+    "Examining the \"All results\" table, we decided to choose 'weighted ensemble2' as our final model, as it is a balance of overall accuracy and the prediction of both safety = 0 and safety = 1.\n",
     "\n",
-    "Next, we would use ensemble strategy of 'weighted ensemble2' to predict on Toronto street views."
+    "Next, we would use the ensemble strategy of 'weighted ensemble2' to predict Toronto street views (ensemble_toronto.ipynb)."
    ]
   },
   {
