--- a/code/ensemble_toronto.ipynb
+++ b/code/ensemble_toronto.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this script, we apply the best ensemble strategy found in ensemble_boston_test.ipynb on Toronto images.\n",
+    "In this script, we apply the best ensemble strategy found in ensemble_boston_test.ipynb to predict on Toronto images.\n",
     "\n",
     "The strategy is an averaging + weighted ensemble:\n",
     "\n",
