--- a/code/Toronto_sample.ipynb
+++ b/code/Toronto_sample.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Those images would be used to deploy our final model for the predictions of Perceived Toronto Street View. \n",
     "\n",
-    "The original data were fetched from: https://www.toronto.ca/city-government/data-research-maps/open-data/open-data-catalogue/#f71a13c4-fb51-6116-57b7-1f51a8190585 There was no zoning / subdistrict c was not avaliable. "
+    "The original data were fetched from: https://www.toronto.ca/city-government/data-research-maps/open-data/open-data-catalogue/#f71a13c4-fb51-6116-57b7-1f51a8190585 There was no zoning / subdistrict column in the data. "
    ]
   },
   {
