--- a/code/merge_fetched_train_test_image_with_target.ipynb
+++ b/code/merge_fetched_train_test_image_with_target.ipynb
@@ -4,27 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this script, after fetching images based on boston_train_list.csv and boston_test_list.csv using Google Street View API, we merge the fetched train / test images' metadata with the target variable.\n",
+    "In this script, 1) after fetching images based on boston_train_list.csv and boston_test_list.csv using Google Street View API, we merge the fetched train / test images' metadata with the target variable.\n",
     "\n",
-    "\n",
-    "You should use this script if you are saving Boston images into two (train and test) seperate folders. \n",
-    "\n",
-    "If you are saving all Boston images into one folder, you should use check_fetched_images_and_merge_with_target.ipynb."
+    "2) we calculated the fetched images' updated year."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import datetime as dt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1) Merge the fetched train / test images' metadata with the target variable.\n",
+    "\n",
     "### train images' target: create a table 'train_fetched_with_target'"
    ]
   },
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +143,13 @@
        "4     OK  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_meta = pd.read_json('~/Desktop/boston_train/metadata/metadata.json')\n",
+    "train_meta = pd.read_json('~/Desktop/ML1030/us_safety/boston_train_metadata.json')\n",
     "train_meta.head(5)"
    ]
   },
@@ -494,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -575,13 +576,13 @@
        "2     OK  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_meta = pd.read_json('~/Desktop/boston_test/metadata/metadata.json')\n",
+    "test_meta = pd.read_json('~/Desktop/ML1030/us_safety/boston_test_metadata.json')\n",
     "test_meta.head(3)"
    ]
   },
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +715,7 @@
        "2  POINT (-71.146179 42.362373)     55391  Open Space              12841  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,6 +994,107 @@
    "source": [
     "train_fetched_with_target.to_csv(\"~/Desktop/ML1030/us_safety/boston_train_fetched_with_target.csv\", index = False)\n",
     "test_fetched_with_target.to_csv(\"~/Desktop/ML1030/us_safety/boston_test_fetched_with_target.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2) Calculate the fetched images' updated year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "year\n",
+       "2007.0      130\n",
+       "2008.0        6\n",
+       "2009.0       79\n",
+       "2010.0       26\n",
+       "2011.0      706\n",
+       "2012.0       23\n",
+       "2013.0     1853\n",
+       "2014.0      428\n",
+       "2015.0      243\n",
+       "2016.0      660\n",
+       "2017.0     1540\n",
+       "2018.0    10200\n",
+       "2019.0       23\n",
+       "Name: _file, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_fetched['year']= pd.to_datetime(train_fetched['date'], format='%Y/%m/%d').dt.year\n",
+    "train_fetched.groupby(['year']).count()['_file']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "year\n",
+       "2007.0      38\n",
+       "2008.0       2\n",
+       "2009.0      18\n",
+       "2010.0       6\n",
+       "2011.0     201\n",
+       "2012.0       6\n",
+       "2013.0     440\n",
+       "2014.0      83\n",
+       "2015.0      82\n",
+       "2016.0     174\n",
+       "2017.0     387\n",
+       "2018.0    2534\n",
+       "2019.0       3\n",
+       "Name: _file, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_fetched['year']= pd.to_datetime(test_fetched['date'], format='%Y/%m/%d').dt.year\n",
+    "test_fetched.groupby(['year']).count()['_file']"
    ]
   },
   {
