--- a/code/ensemble_toronto.ipynb
+++ b/code/ensemble_toronto.ipynb
@@ -484,6 +484,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Among the 2034 randomly selected Toronto images, 1031 were predicted as 0 (less safe), and 1003 were predicted as 1 (more safe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pred_safety\n",
+       "0    1031\n",
+       "1    1003\n",
+       "Name: _file, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_pred_toronto.groupby('pred_safety').count()['_file']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
