calculate image update year

--- a/code/merge_fetched_train_test_image_with_target.ipynb
+++ b/code/merge_fetched_train_test_image_with_target.ipynb
@@ -1005,6 +1005,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 7)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_fetched[train_fetched['date'].isnull()].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [
@@ -1095,6 +1115,26 @@
    "source": [
     "test_fetched['year']= pd.to_datetime(test_fetched['date'], format='%Y/%m/%d').dt.year\n",
     "test_fetched.groupby(['year']).count()['_file']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 7)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_fetched[test_fetched['date'].isnull()].shape"
    ]
   },
   {
