--- a/code/CNN_model1.ipynb
+++ b/code/CNN_model1.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this script, we build CNN model1 (with Boston Train Images as the training set), and predict on Boston Test Images. The produced prediction would be used to find best ensemble strategy.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "_uuid": "da035fe58e548e8b1b7e8e89725b9e6bc745aa7b"
    },
@@ -830,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
