--- a/code/CNN_model2.ipynb
+++ b/code/CNN_model2.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this script, we build CNN model2 (with Boston Train and Test Images as the training set), and predict on Toronto Images. This modle could test whether increasing training images would boost model performance; model would then generate more accurate predictions on Toronto Images. We also generated LIME predictions on some randomly selected Toronto images.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "_uuid": "da035fe58e548e8b1b7e8e89725b9e6bc745aa7b"
    },
@@ -1344,7 +1352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
